--- a/references.bib
+++ b/references.bib
@@ -3,23 +3,46 @@
 % Start with your annual review article
 
 
-@article{healyFuckNuance2017,
-	title = {Fuck Nuance},
-	volume = {35},
-	issn = {0735-2751, 1467-9558},
-	url = {http://journals.sagepub.com/doi/10.1177/0735275117709046},
-	doi = {10.1177/0735275117709046},
-	abstract = {Nuance is not a virtue of good sociological theory. Although often demanded and superficially attractive, nuance inhibits the abstraction on which good theory depends. I describe three “nuance traps” common in sociology and show why they should be avoided on grounds of principle, aesthetics, and strategy. The argument is made without prejudice to the substantive heterogeneity of the discipline.},
-	pages = {118--127},
-	number = {2},
-	journaltitle = {Sociological Theory},
-	shortjournal = {Sociological Theory},
-	author = {Healy, Kieran},
-	urldate = {2022-10-17},
-	date = {2017-06},
+@article{craiuSixStatisticalSenses2023,
+	title = {Six Statistical Senses},
+	author = {Craiu, Radu V. and Gong, Ruobin and Meng, Xiao-Li},
+	year = {2023},
+	month = {03},
+	date = {2023-03-09},
+	journal = {Annual Review of Statistics and Its Application},
+	pages = {699--725},
+	volume = {10},
+	number = {Volume 10, 2023},
+	doi = {10.1146/annurev-statistics-040220-015348},
+	url = {https://www.annualreviews.org/content/journals/10.1146/annurev-statistics-040220-015348},
+	langid = {en}
+}
+
+
+% Below that, add bibtex for your sources
+
+@article{fisherCausesHumanVariability1919,
+	title = {The causes of human variability},
+	author = {Fisher, R. A.},
+	year = {1919},
+	month = {01},
+	date = {1919-01},
+	journal = {The Eugenics Review},
+	pages = {213--220},
+	volume = {10},
+	number = {4},
+	url = {https://pmc.ncbi.nlm.nih.gov/articles/PMC2942138/}
 }
 
 
 
-
-% Below that, add bibtex for your sources
+@book{finetti2017,
+	title = {Theory of Probability: A Critical Introductory Treatment},
+	author = {Finetti, Bruno de},
+	year = {2017},
+	month = {04},
+	date = {2017-04-17},
+	publisher = {John Wiley & Sons},
+	note = {Google-Books-ID: FzjoDQAAQBAJ},
+	langid = {en}
+}
